--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -33,13 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import your libraries\n",
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split as tts\n",
+    "from sklearn.linear_model import LinearRegression as LinReg\n",
+    "# Modelos\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "#\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, fbeta_score, confusion_matrix\n"
    ]
   },
   {
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +155,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>0.241386</td>\n",
        "      <td>0.109171</td>\n",
        "      <td>-0.127126</td>\n",
@@ -158,7 +169,7 @@
        "      <td>Marcus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>0.303106</td>\n",
        "      <td>0.352558</td>\n",
        "      <td>0.082701</td>\n",
@@ -172,7 +183,7 @@
        "      <td>Clarius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>-0.116585</td>\n",
        "      <td>0.281897</td>\n",
        "      <td>0.175168</td>\n",
@@ -186,7 +197,7 @@
        "      <td>Philippus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>-0.326430</td>\n",
        "      <td>-0.652394</td>\n",
        "      <td>0.384996</td>\n",
@@ -200,7 +211,7 @@
        "      <td>Philippus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>-0.437525</td>\n",
        "      <td>-0.471816</td>\n",
        "      <td>0.463236</td>\n",
@@ -233,13 +244,33 @@
        "4 -3.108388 -2.991700 -1.141030  Philippus  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12017, 11)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset.shape"
    ]
   },
   {
@@ -251,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +329,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>-0.017834</td>\n",
        "      <td>0.132725</td>\n",
        "      <td>0.125378</td>\n",
@@ -311,7 +342,7 @@
        "      <td>0.189796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>-0.202992</td>\n",
        "      <td>-0.000745</td>\n",
        "      <td>-3.210528</td>\n",
@@ -324,7 +355,7 @@
        "      <td>0.745333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>1.019049</td>\n",
        "      <td>0.211237</td>\n",
        "      <td>-0.155578</td>\n",
@@ -337,7 +368,7 @@
        "      <td>-0.049630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>0.451232</td>\n",
        "      <td>-0.267686</td>\n",
        "      <td>0.335206</td>\n",
@@ -350,7 +381,7 @@
        "      <td>0.025485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>-0.227680</td>\n",
        "      <td>0.109171</td>\n",
        "      <td>0.413447</td>\n",
@@ -382,13 +413,33 @@
        "4  0.091562  0.313536  0.256389  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8012, 10)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_dataset.shape"
    ]
   },
   {
@@ -400,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -442,23 +493,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Philippus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Ubuntius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Esequlius</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Coronavirucus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Philippus</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -475,13 +526,33 @@
        "4      Philippus"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sample_submission.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8012, 1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_submission.shape"
    ]
   },
   {
@@ -499,39 +570,164 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#your code"
+    "**% TIMES THAT EACH \"CATEGORY\" APPEARS IN MY DATAFRAME <train_dataset>**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marcus           0.424981\n",
+      "Clarius          0.196555\n",
+      "Philippus        0.113173\n",
+      "Coronavirucus    0.083964\n",
+      "Mongucus         0.053258\n",
+      "Paithonius       0.049929\n",
+      "Ubuntius         0.042606\n",
+      "Esequlius        0.035533\n",
+      "Name: 10, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code"
+    "#your code\n",
+    "print(train_dataset['10'].value_counts()/12017)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10'], dtype='object')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#your code"
+    "train_dataset.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code"
+    "#your code\n",
+    "X = train_dataset.drop(\"10\", axis=1)\n",
+    "y = train_dataset[[\"10\"]].squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#your code\n",
+    "X_train, X_test, y_train, y_test = tts(X,y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#your code\n",
+    "models={\n",
+    "    'dis': LinearDiscriminantAnalysis(),\n",
+    "    'neighbors': KNeighborsClassifier(),\n",
+    "    'naive': GaussianNB(),\n",
+    "    'tree': DecisionTreeClassifier(),\n",
+    "    'svm': SVC(),}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrenando  dis\n",
+      "Entrenando  neighbors\n",
+      "Entrenando  naive\n",
+      "Entrenando  tree\n",
+      "Entrenando  svm\n"
+     ]
+    }
+   ],
+   "source": [
+    "#your code\n",
+    "for name, model in models.items():\n",
+    "    print(\"Entrenando \", name)\n",
+    "    model.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------dis--------\n",
+      "Accuracy:  0.5357737104825291\n",
+      "Precision:  0.44597942878043123\n",
+      "Recall:  0.5357737104825291\n",
+      "F1:  0.43619774128431876\n",
+      "--------neighbors--------\n",
+      "Accuracy:  0.7529118136439268\n",
+      "Precision:  0.7577516380643737\n",
+      "Recall:  0.7529118136439268\n",
+      "F1:  0.7512950407333433\n",
+      "--------naive--------\n",
+      "Accuracy:  0.34193011647254573\n",
+      "Precision:  0.4937396100831804\n",
+      "Recall:  0.34193011647254573\n",
+      "F1:  0.3346956595325102\n",
+      "--------tree--------\n",
+      "Accuracy:  0.9787853577371048\n",
+      "Precision:  0.97902749533019\n",
+      "Recall:  0.9787853577371048\n",
+      "F1:  0.9788384733115214\n",
+      "--------svm--------\n",
+      "Accuracy:  0.7229617304492513\n",
+      "Precision:  0.7254429114285207\n",
+      "Recall:  0.7229617304492513\n",
+      "F1:  0.7024327137614207\n"
+     ]
+    }
+   ],
+   "source": [
+    "#your code\n",
+    "for name, model in models.items():\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    print(f\"--------{name}--------\")\n",
+    "    print(\"Accuracy: \", accuracy_score(y_test,y_pred))\n",
+    "    print(\"Precision: \", precision_score(y_test,y_pred,average=\"weighted\"))\n",
+    "    print(\"Recall: \", recall_score(y_test,y_pred,average=\"weighted\"))\n",
+    "    print(\"F1: \", f1_score(y_test, y_pred,average=\"weighted\"))"
    ]
   },
   {
@@ -552,11 +748,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n"
    ]
   },
   {
@@ -584,21 +780,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'accuracy': 0.12368946580129805,\n",
-       " 'quote': 'Nope, not good enough. But you shall rise as the glorious phoenix from the ashes of this score and get to the top!'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_submission = \"../data/sample_submission.csv\"\n",
     "with open(my_submission) as f:\n",
@@ -612,11 +796,18 @@
    "source": [
     "![hope-you-enjoy](https://imgs.xkcd.com/comics/machine_learning.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
